tests/baselines/reference/throwWithoutNewLine1.errors.txt
tests/cases/compiler/throwWithoutNewLine1.ts(1,6): error TS1109: Expression expected.


==== tests/cases/compiler/throwWithoutNewLine1.ts (1 errors) ====
    throw
         
!!! error TS1109: Expression expected.